// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateWalletName should not render if not open 1`] = `<DocumentFragment />`;

exports[`UpdateWalletName should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzpans eODffd absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxhCb ipiIgT"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="sc-AxirZ izhStr flex flex-col space-y-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                class="sc-AxiKw geAJqa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                data-testid="UpdateWalletName__input"
                name="name"
              />
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="sc-AxjAm fCKjFI"
                color="primary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="sc-AxjAm colAFb"
                color="primary"
                data-testid="UpdateWalletName__submit"
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzpans eODffd absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxhCb ipiIgT"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="sc-AxirZ kMHTdH flex flex-col space-y-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="sc-AxiKw geAJqa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger"
              >
                A Wallet named 'ARK Wallet 2' already exists on this profile
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="sc-AxjAm fCKjFI"
                color="primary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="sc-AxjAm colAFb"
                color="primary"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 2`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzpans eODffd absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxhCb ipiIgT"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="sc-AxirZ kMHTdH flex flex-col space-y-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="sc-AxiKw geAJqa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger"
              >
                A Wallet named 'ark wallet 2' already exists on this profile
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="sc-AxjAm fCKjFI"
                color="primary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="sc-AxjAm colAFb"
                color="primary"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 3`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzpans eODffd absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxhCb ipiIgT"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="sc-AxirZ kMHTdH flex flex-col space-y-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="sc-AxiKw geAJqa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger"
              >
                A Wallet named 'ARK Wallet 2' already exists on this profile
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="sc-AxjAm fCKjFI"
                color="primary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="sc-AxjAm colAFb"
                color="primary"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 4`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzpans eODffd absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxhCb ipiIgT"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="sc-AxirZ kMHTdH flex flex-col space-y-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="sc-AxiKw geAJqa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger"
              >
                A Wallet named 'ARK Wallet 2' already exists on this profile
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="sc-AxjAm fCKjFI"
                color="primary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="sc-AxjAm colAFb"
                color="primary"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show error message when name consists only of whitespace 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzpans eODffd absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxhCb ipiIgT"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="sc-AxirZ kMHTdH flex flex-col space-y-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="sc-AxiKw geAJqa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger"
              >
                'Name' is invalid
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="sc-AxjAm fCKjFI"
                color="primary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="sc-AxjAm colAFb"
                color="primary"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show error message when name exceeds 42 characters 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzpans eODffd absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxhCb ipiIgT"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Name Wallet
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            You can enter the name of your wallet for a quick search in your wallet.
          </div>
          <form
            class="mt-8"
            data-testid="Form"
          >
            <fieldset
              class="sc-AxirZ kMHTdH flex flex-col space-y-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                data-testid="FormLabel"
                for="name"
              >
                Name
              </label>
              <input
                aria-invalid="true"
                class="sc-AxiKw geAJqa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
                data-testid="UpdateWalletName__input"
                name="name"
              />
              <p
                class="text-sm text-theme-danger"
              >
                'Name' should have at most 42 characters
              </p>
            </fieldset>
            <div
              class="flex justify-end mt-8 space-x-3"
            >
              <button
                class="sc-AxjAm fCKjFI"
                color="primary"
                type="button"
              >
                Cancel
              </button>
              <button
                class="sc-AxjAm colAFb"
                color="primary"
                data-testid="UpdateWalletName__submit"
                disabled=""
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
